k8s/ems-app/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: ems-backend
  labels:
    app: ems-backend
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: ems-backend
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ems-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ems-backend
  template:
    metadata:
      labels:
        app: ems-backend
    spec:
      containers:
        - name: ems-backend
          image: sheharakarunarathna/backend:e40962cf5ce40ec828c314ee46bd34384ac13f20  # ❗ no tag here
          imagePullPolicy: Always              # safer for now
          ports:
            - containerPort: 8080
