k8s/ems-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ems-ingress

  annotations:
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"

    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - ems.cse23.org
      secretName: ems-tls

    - hosts:
        - authems.cse23.org
      secretName: authems-tls

  rules:

    # FRONTEND
    - host: ems.cse23.org
      http:
        paths:
          - path: /py
            pathType: Prefix
            backend:
              service:
                name: kong
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ems-frontend
                port:
                  number: 3000

    # KEYCLOAK
    - host: authems.cse23.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8180
